# Simulation-Engine

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
config/configA_z2_withStrategy_noGMem/: settings.json
config/configA_z3_withStrategy_noGMem/: settings.json
config/configA_z4_withStrategy_noGMem/: settings.json
config/configA_z5_withStrategy_noGMem/: settings.json
config/configA_z6_withStrategy_noGMem/: settings.json
config/configA_z7_withStrategy_oneMem_moralVisible/: settings.json
config/configA_z7_withStrategy_oneMem_moralVisible_5type/: settings.json
config/configA_z7_withStrategy_oneMem_moralVisible_5type_commu_free/: settings.json
config/configA_z8_easyHunting_visible/: settings.json
config/configA_z8_hardHunting_visible/: settings.json
config/configA_z8_withStrategy_oneMem_moralVisible_5type_commu_free/: settings.json
config/configA_z9_easyHunting_visible/: settings.json
config/configA_z9_hardHunting_visible/: settings.json
config/configZ_major_v1/: settings.json
config/configZ_major_v2/: settings.json
config/configZ_major_v2_group_compete/: settings.json
config/configZ_major_v2_invisible/: settings.json
config/configZ_major_v2_social_cost_1round/: settings.json
config/configZ_major_v3/: settings.json
config/configZ_major_v3_group_compete/: settings.json
config/configZ_major_v3_invisible/: settings.json
config/configZ_major_v4/: change_log.md  (+1 more)
docs/: Automatic_Analysis_Report_Requirement.md  Token_Usage_Analysis.md  Version 0.2 Technical Specification.md  claude-cli-subprocess-tests.md
(+208 files in other folders)
