[project]
name = "social-simulation-with-moral-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40.0",
    "aiofiles>=24.1.0",
    "rich>=13.7.0",
    "colorlog>=6.10.1",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.3.3",
    "openai>=2.21.0",
    "jinja2>=3.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "jsonargparse[signatures]>=4.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
